--- a/po/po4a.conf
+++ b/po/po4a.conf
@@ -1,7 +1,7 @@
 [po4a_langs] de fr ja
 [po4a_paths] po/livechat.en.pot $lang:po/livechat.$lang.po
 
-[options] opt:"--addendum-charset=UTF-8" opt:"--localized-charset=UTF-8" opt:"--master-charset=UTF-8" opt:"--master-language=en_US" opt:"--msgmerge-opt='--no-wrap'" opt:"--porefs=file" opt:"--wrap-po=newlines"
+[options] opt:"--addendum-charset=UTF-8" opt:"--localized-charset=UTF-8" opt:"--master-charset=UTF-8" opt:"--master-language=en_US" opt:"--msgmerge-opt=--no-wrap" opt:"--porefs=file" opt:"--wrap-po=newlines"
 
 [po4a_alias:markdown] text opt:"--option markdown" opt:"--option yfm_keys=title" opt:"--addendum-charset=UTF-8" opt:"--localized-charset=UTF-8" opt:"--master-charset=UTF-8" opt:"--keep=0"
 
