--- a/po/po4a.conf
+++ b/po/po4a.conf
@@ -3,7 +3,7 @@
 
 [options] opt:"--addendum-charset=UTF-8" opt:"--localized-charset=UTF-8" opt:"--master-charset=UTF-8" opt:"--master-language=en_US" opt:"--msgmerge-opt=--no-wrap" opt:"--porefs=file" opt:"--wrap-po=newlines"
 
-[po4a_alias:markdown] text opt:"--option markdown" opt:"--option yfm_keys=title,description" opt:"--option neverwrap" opt:"--addendum-charset=UTF-8" opt:"--localized-charset=UTF-8" opt:"--master-charset=UTF-8" opt:"--keep=0"
+[po4a_alias:markdown] text opt:"--option markdown" opt:"--option yfm_keys=title,description" opt:"--option neverwrap" opt:"--option breaks='^\{\{%.*%\}\}$'" opt:"--addendum-charset=UTF-8" opt:"--localized-charset=UTF-8" opt:"--master-charset=UTF-8" opt:"--keep=0"
 
 [type: markdown] support/documentation/content/en/_index.md $lang:support/documentation/content/$lang/_index.md
 [type: markdown] support/documentation/content/en/tests/_index.md $lang:support/documentation/content/$lang/tests/_index.md
